[metadata]
name = game-maintenance-manager-austinhellerrepo
version = 0.0.1
author = Austin Heller
description = A process that permits the starting and stopping of a maintenance window
url = https://github.com/AustinHellerRepo/GameMaintenanceManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  kafka-manager-austinhellerrepo@git+https://github.com/AustinHellerRepo/KafkaManager

[options.packages.find]
where = src
